--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-stock.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-stock.html
@@ -9,7 +9,9 @@
             <th>标的公司</th>
             <th>质押数量(万元/股)</th>
             <th>股权性质</th>
-            <th>他权情况</th>
+            {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
+                <th>他权情况</th>
+            {% endif %}
             <th>入库情况</th>
             {% if PAGE_TITLE == '放款次序' or PAGE_TITAL == '权证管理' %}
                 <td>操作</td>
@@ -27,13 +29,15 @@
                         <td>{{ warrant.stock_warrant.target }}</td>
                         <td>{{ warrant.stock_warrant.share }}</td>
                         <td>{{ warrant.stock_warrant.get_stock_typ_display }}</td>
-                        <td>
-                            {% for ypothec in warrant.ypothec_m_agree.all %}
-                                {% if ypothec.agree.id == agree_obj.id %}
-                                    {{ ypothec.warrant }}
-                                {% endif %}
-                            {% endfor %}
-                        </td>
+                        {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
+                            <td>
+                                {% for ypothec in warrant.ypothec_m_agree.all %}
+                                    {% if ypothec.agree.id == agree_obj.id %}
+                                        {{ ypothec.warrant }}
+                                    {% endif %}
+                                {% endfor %}
+                            </td>
+                        {% endif %}
                         <td>{{ warrant.get_warrant_state_display }}</td>
                         {% if PAGE_TITLE == '放款次序' %}
                             <td><a class="btn btn-primary btn-xs delGuaranteeB">删除</a></td>
