--- a/A_dbms/templates/dbms/report/provide/provide_list-table.html
+++ b/A_dbms/templates/dbms/report/provide/provide_list-table.html
@@ -13,7 +13,7 @@
             <th>项目经理A</th>
             <th>项目经理B</th>
             <th>放款时间</th>
-            <th>还款时间</th>
+            <th>到期日</th>
             <th>回款金额</th>
             <th>责任余额</th>
         </tr>
