--- a/A_dbms/templates/dbms/warrant/extra/js-warrant-edit.html
+++ b/A_dbms/templates/dbms/warrant/extra/js-warrant-edit.html
@@ -28,6 +28,9 @@
             case ('5'):
                 $('#form_ground_add_edit').show();
                 break;
+             case ('6'):
+                $('#form_construct_add_edit').show();
+                break;
             case ('11'):
                 $('#form_receivable_add_edit').show();
                 break;
