--- a/A_dbms/templates/dbms/warrant/modl/warrant-edit-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-edit-mod.html
@@ -18,6 +18,8 @@
                         {% include 'dbms/warrant/modl/mod_form/house-add-edit.html' %}
                     {% elif warrant_typ_n == 5 %}
                         {% include 'dbms/warrant/modl/mod_form/ground-add-edit.html' %}
+                    {% elif warrant_typ_n == 6 %}
+                        {% include 'dbms/warrant/modl/mod_form/construct-add-edit.html' %}
                     {% elif warrant_typ_n == 11 %}
                         {% include 'dbms/warrant/modl/mod_form/receivable-add-edit.html' %}
                     {% elif warrant_typ_n == 99 %}
