--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry-hypothec.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry-hypothec.html
@@ -3,7 +3,7 @@
         权证编码：{{ warrant_obj.warrant_num }}
     </label>
     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-        委托合同：{{ warrant_obj.ypothec_warrant.agree }}
+        委托合同：{{ warrant_obj.ypothec_warrant.agree.agree_num }}
     </label>
     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         状态：{{ warrant_obj.get_warrant_state_display }}
