--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-chattel.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-chattel.html
@@ -7,7 +7,9 @@
             <th>所有人</th>
             <th>动产类型</th>
             <th>详情</th>
-            <th>他权情况</th>
+            {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
+                <th>他权情况</th>
+            {% endif %}
             <th>入库情况</th>
             {% if PAGE_TITLE == '放款次序' or PAGE_TITLE == '权证管理' %}
                 <td>操作</td>
@@ -26,13 +28,15 @@
                         <td>{{ warrant.chattel_warrant.chattel_owner.short_name }}</td>
                         <td>{{ warrant.chattel_warrant.get_chattel_typ_display }}</td>
                         <td>{{ warrant.chattel_warrant.chattel_detail }}</td>
-                        <td>
-                            {% for ypothec in warrant.ypothec_m_agree.all %}
-                                {% if ypothec.agree.id == agree_obj.id %}
-                                    {{ ypothec.warrant }}
-                                {% endif %}
-                            {% endfor %}
-                        </td>
+                        {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
+                            <td>
+                                {% for ypothec in warrant.ypothec_m_agree.all %}
+                                    {% if ypothec.agree.id == agree_obj.id %}
+                                        {{ ypothec.warrant }}
+                                    {% endif %}
+                                {% endfor %}
+                            </td>
+                        {% endif %}
                         <td>{{ warrant.get_warrant_state_display }}</td>
                         {% if PAGE_TITLE == '放款次序' %}
                             <td><a class="btn btn-primary btn-xs delGuaranteeB">删除</a></td>
