--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-vehicle.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-vehicle.html
@@ -7,7 +7,9 @@
             <th>所有权人</th>
             <th>车架号</th>
             <th>车牌号</th>
-            <th>他权情况</th>
+            {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
+                <th>他权情况</th>
+            {% endif %}
             <th>入库情况</th>
             {% if PAGE_TITLE == '放款次序' or PAGE_TITLE == '权证管理' %}
                 <td>操作</td>
@@ -25,13 +27,15 @@
                         <td>{{ warrant.vehicle_warrant.vehicle_owner.short_name }}</td>
                         <td>{{ warrant.vehicle_warrant.frame_num }}</td>
                         <td>{{ warrant.vehicle_warrant.plate_num }}</td>
-                        <td>
-                            {% for ypothec in warrant.ypothec_m_agree.all %}
-                                {% if ypothec.agree.id == agree_obj.id %}
-                                    {{ ypothec.warrant }}
-                                {% endif %}
-                            {% endfor %}
-                        </td>
+                        {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
+                            <td>
+                                {% for ypothec in warrant.ypothec_m_agree.all %}
+                                    {% if ypothec.agree.id == agree_obj.id %}
+                                        {{ ypothec.warrant }}
+                                    {% endif %}
+                                {% endfor %}
+                            </td>
+                        {% endif %}
                         <td>{{ warrant.get_warrant_state_display }}</td>
                         {% if PAGE_TITLE == '放款次序' %}
                             <td><a class="btn btn-primary btn-xs delGuaranteeB">删除</a></td>
