--- a/A_dbms/templates/dbms/provide/provide/provide-table.html
+++ b/A_dbms/templates/dbms/provide/provide/provide-table.html
@@ -2,7 +2,7 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>合同编号({{ provide_acount }})</th>
+            <th>合同编号</th>
             <th>客户名称</th>
             <th>放款银行</th>
             <th>放款金额</th>
@@ -29,7 +29,6 @@
                     <td><a href="{% url 'dbms:provide_scan' provide_id=provide.id %}">
                         {{ provide.notify.agree.agree_num }} </a></td>
                 {% endif %}
-                {#                <td>{{ provide.notify.agree.lending.summary.custom.short_name }}</td>#}
                 <td>{{ provide.notify.agree.lending.summary.custom.short_name }}</td>
                 <td>{{ provide.notify.agree.branch.short_name }}</td>
                 <td align="right">{{ provide.provide_money }}</td>
@@ -44,7 +43,7 @@
                 {% endif %}
                 <td>{{ provide.get_implement_display }}</td>
                 <td>{{ provide.get_provide_status_display }}</td>
-            <tr>
+            </tr>
         {% endfor %}
         </tbody>
     </table>
