--- a/A_dbms/templates/dbms/report/provide/provide_list-filter.html
+++ b/A_dbms/templates/dbms/report/provide/provide_list-filter.html
@@ -1,18 +1,18 @@
 <div>
     <label>
-        {% if kwargs.provide_status == None %}
-            <a class="btn btn-primary btn-sm active" href="{% url 'dbms:provide_all' %}">全部</a>
+        {% if kwargs.provide_typ == None %}
+            <a class="btn btn-primary btn-sm active" href="{% url 'dbms:report_provide_list_all' %}">全部</a>
         {% else %}
-            <a class="btn btn-primary btn-sm" href="{% url 'dbms:provide_all' %}">全部</a>
+            <a class="btn btn-primary btn-sm" href="{% url 'dbms:report_provide_list_all' %}">全部</a>
         {% endif %}
         {# 方式一：#}
-        {% for provide_status in PROVIDE_STATUS_LIST %}
-            {% if provide_status.0 == kwargs.provide_status %}
+        {% for provide_typ in PROVIDE_TYP_LIST %}
+            {% if provide_typ.0 == kwargs.provide_typ %}
                 <a class="btn btn-primary btn-sm active"
-                   href="{% url 'dbms:provide' provide_status=provide_status.0 %}">{{ provide_status.1 }}</a>
+                   href="{% url 'dbms:report_provide_list' provide_typ=provide_typ.0 %}">{{ provide_typ.1 }}</a>
             {% else %}
                 <a class="btn btn-primary btn-sm"
-                   href="{% url 'dbms:provide' provide_status=provide_status.0 %}">{{ provide_status.1 }} </a>
+                   href="{% url 'dbms:report_provide_list' provide_typ=provide_typ.0 %}">{{ provide_typ.1 }} </a>
             {% endif %}
         {% endfor %}
     </label>
