--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry-ground.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry-ground.html
@@ -1,17 +1,14 @@
 <div class="panel-body row">
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        权证编码：{{ warrant_obj.warrant_num }}
-    </label>
-    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         坐落：{{ warrant_obj.ground_warrant.ground_locate }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         用途：{{ warrant_obj.ground_warrant.get_ground_app_display }}
     </label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        土地面积：{{ warrant_obj.ground_warrant.ground_area }}
+        面积(㎡)：{{ warrant_obj.ground_warrant.ground_area }}
     </label>
-    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+    <label class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
         库存状态：{{ warrant_obj.get_warrant_state_display }}
     </label>
 </div>
