--- a/A_dbms/templates/dbms/warrant/scan/warrant-summry-receiveable.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-summry-receiveable.html
@@ -1,11 +1,14 @@
 <div class="panel-body row">
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-        权证编码：{{ warrant_obj.warrant_num }}
-    </label>
-    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         权证类型：{{ warrant_obj.get_warrant_typ_display }}
     </label>
-    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        所有权人：{{ warrant_obj.receive_warrant.receive_owner.short_name }}
+    </label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        详情：{{ warrant_obj.receive_warrant.receivable_detail }}
+    </label>
+    <label class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
         库存状态：{{ warrant_obj.get_warrant_state_display }}
     </label>
 </div>
