--- a/A_dbms/templates/dbms/warrant/scan/warrant-tab.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant-tab.html
@@ -15,12 +15,12 @@
             <li role="presentation">
                 <a href="#evaluate" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">评估情况 </a></li>
-            <li role="presentation">
-                <a href="#mortgage" style="background-color: #f5f5f5"
-                   aria-controls="settings" role="tab" data-toggle="tab">抵押情况 </a></li>
             <li role="presentation" class="active">
                 <a href="#ownership" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">产权人 </a></li>
+            <li role="presentation">
+                <a href="#mortgage" style="background-color: #f5f5f5"
+                   aria-controls="settings" role="tab" data-toggle="tab">项目情况 </a></li>
         {% elif warrant_typ == 2 %} <!--房产包-->
             <li role="presentation">
                 <a href="#storages" style="background-color: #f5f5f5"
@@ -28,15 +28,19 @@
             <li role="presentation">
                 <a href="#valuate" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">评估情况 </a></li>
-            <li role="presentation">
-                <a href="#mortgage" style="background-color: #f5f5f5"
-                   aria-controls="settings" role="tab" data-toggle="tab">抵押情况 </a></li>
             <li role="presentation" class="active">
                 <a href="#ownership" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">产权人 </a></li>
             <li role="presentation">
+                <a href="#mortgage" style="background-color: #f5f5f5"
+                   aria-controls="settings" role="tab" data-toggle="tab">项目情况 </a></li>
+            <li role="presentation">
                 <a href="#housebag" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">房产包 </a></li>
+        {% elif warrant_typ == 11 %} <!--应收账款-->
+            <li role="presentation" class="active">
+                <a href="#mortgage" style="background-color: #f5f5f5"
+                   aria-controls="settings" role="tab" data-toggle="tab">项目情况 </a></li>
         {% elif warrant_typ == 31 %} <!--票据包-->
             <li role="presentation">
                 <a href="#storages" style="background-color: #f5f5f5"
@@ -44,8 +48,11 @@
             <li role="presentation" class="active">
                 <a href="#draftbag" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">票据包</a></li>
-
+            <li role="presentation">
+                <a href="#mortgage" style="background-color: #f5f5f5"
+                   aria-controls="settings" role="tab" data-toggle="tab">项目情况 </a></li>
         {% endif %}
+
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
@@ -59,26 +66,32 @@
                 {% include 'dbms/warrant/scan/warrant_tab/storages.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="evaluate"> <!--评估情况-->
                 {% include 'dbms/warrant/scan/warrant_tab/valuate.html' %}</div>
-            <div role="tabpanel" class="tab-pane" id="mortgage"> <!--抵押情况-->
-                {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
             <div role="tabpanel" class="tab-pane active" id="ownership"> <!--产权人-->
                 {% include 'dbms/warrant/scan/warrant_tab/ownership.html' %}</div>
+            <div role="tabpanel" class="tab-pane" id="mortgage"> <!--项目情况-->
+                {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
         {% elif warrant_typ == 2 %} <!--房产包-->
             <div role="tabpanel" class="tab-pane" id="storages"> <!--出入库-->
                 {% include 'dbms/warrant/scan/warrant_tab/storages.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="valuate"> <!--评估情况-->
                 {% include 'dbms/warrant/scan/warrant_tab/valuate.html' %}</div>
-            <div role="tabpanel" class="tab-pane" id="mortgage"> <!--抵押情况-->
-                {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
             <div role="tabpanel" class="tab-pane active" id="ownership"> <!--产权人-->
                 {% include 'dbms/warrant/scan/warrant_tab/ownership.html' %}</div>
+            <div role="tabpanel" class="tab-pane" id="mortgage"> <!--项目情况-->
+                {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
             <div role="tabpanel" class="tab-pane" id="housebag"> <!--房产包-->
                 {% include 'dbms/warrant/scan/warrant_tab/housebag.html' %}</div>
+        {% elif warrant_typ == 11 %} <!--应收账款-->
+            <div role="tabpanel" class="tab-pane active" id="mortgage"> <!--项目情况-->
+                {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
         {% elif warrant_typ == 31 %} <!--票据包-->
             <div role="tabpanel" class="tab-pane" id="storages"> <!--出入库-->
                 {% include 'dbms/warrant/scan/warrant_tab/storages.html' %}</div>
             <div role="tabpanel" class="tab-pane active" id="draftbag"> <!--票据包-->
                 {% include 'dbms/warrant/scan/warrant_tab/draftbag.html' %}</div>
+            <div role="tabpanel" class="tab-pane" id="mortgage"> <!--项目情况-->
+                {% include 'dbms/warrant/scan/warrant_tab/mortgage.html' %}</div>
         {% endif %}
+
     </div>
 </div>
