--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/valuate.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/valuate.html
@@ -21,7 +21,7 @@
                 <td>{{ evaluate.get_evaluate_state_display }}</td>
                 <td>{{ evaluate.evaluate_value }}</td>
                 <td>{{ evaluate.evaluate_date }}</td>
-                <td>{{ evaluate.evaluate_explain }}</td>
+                <td>{{ evaluate.evaluate_explain|default_if_none:"" }}</td>
                 <td>{{ evaluate.evaluator.name }}</td>
                 {% if  PAGE_TITAL == '权证预览' %}
                     <td><a class="btn btn-danger btn-xs delEvaluateB">删除</a></td>
