--- a/A_dbms/templates/dbms/agree/agree_board/entrust/home-page.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/home-page.html
@@ -6,19 +6,19 @@
         最高额委托保证合同
     {% endif %}
 </p>
-<div class="page-table">
-    <div class="page-table-1">
-        <p>担保人（甲方）：成都武侯中小企业融资担保有限责任公司</p>
+<div class="page-home">
+    <div class="page-home-j">
+        <p><strong>担保人（甲方）：成都武侯中小企业融资担保有限责任公司</strong></p>
         <p>住所（地址）：成都市武侯区武青南路33号(武侯新城管委会内)</p>
         <p>法定代表人：何长见</p>
     </div>
-    <div class="page-table-2">
-        <p>被担保人（乙方）：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+    <div class="page-home-y">
+        <p><strong>被担保人（乙方）：{{ agree_obj.lending.summary.custom.name }}</strong></p>
         <p>住所（地址）：
-            <strong><u>{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</u></strong>
+            {{ agree_obj.lending.summary.custom.company_custome.registered_addr }}
         </p>
         <p>法定代表人：
-            <strong><u>{{ agree_obj.lending.summary.custom.company_custome.representative }}</u></strong>
+            {{ agree_obj.lending.summary.custom.company_custome.representative }}
         </p>
     </div>
 </div>
