--- a/A_dbms/templates/dbms/agree/scan/agree-summry-body.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry-body.html
@@ -1,7 +1,8 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     合同编号：{{ agree_obj.agree_num }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    客户名称：{{ agree_obj.lending.summary.custom.short_name }}</label>
+    客户名称：<a target="_blank" href="{% url 'dbms:custom_scan' custom_id=agree_obj.lending.summary.custom.id %}">
+    {{ agree_obj.lending.summary.custom.short_name }}</a></label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     放款银行：{{ agree_obj.branch.short_name }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
