--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-stock.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-app-stock.html
@@ -8,6 +8,7 @@
             <th>所有人</th>
             <th>标的公司</th>
             <th>质押数量(万元/股)</th>
+            <th>占比(%)</th>
             <th>股权性质</th>
             {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
                 <th>他权情况</th>
@@ -23,11 +24,13 @@
             {% if lending_sure.sure_typ in STOCK_LIST %}
                 {% for warrant in lending_sure.warrant_sure.warrant.all %}
                     <tr guarantee-nid={{ warrant.id }} sure-typ-nid={{ lending_sure.sure_typ }}>
-                        <td>{{ forloop.counter }}</td>
+                        <td><a target="_blank" href="{% url 'dbms:warrant_scan' warrant_id=warrant.id %}">
+                            {{ forloop.counter }}</a></td>
                         <td>{{ lending_sure.get_sure_typ_display }}</td>
                         <td>{{ warrant.stock_warrant.stock_owner.short_name }}</td>
                         <td>{{ warrant.stock_warrant.target }}</td>
-                        <td>{{ warrant.stock_warrant.share }}</td>
+                        <td align="right">{{ warrant.stock_warrant.share }}</td>
+                        <td align="right">{{ warrant.stock_warrant.ratio }}</td>
                         <td>{{ warrant.stock_warrant.get_stock_typ_display }}</td>
                         {% if PAGE_TITLE == '权证管理' or PAGE_TITLE == '风控落实' %}
                             <td>
