--- a/A_dbms/templates/dbms/report/provide_list.html
+++ b/A_dbms/templates/dbms/report/provide_list.html
@@ -1,12 +1,9 @@
-{% extends 'dbms/index_dbms.html' %}
-
+{% extends 'base.html' %}
 {% block title %}{{ PAGE_TITLE }}{% endblock %}
-
-{% block right-content-container %}
+{% block  body %}
     {% include 'dbms/report/provide/provide_list-filter.html' %}
     {% include 'dbms/report/provide/provide_list-table.html' %}
 {% endblock %}
 
-{% block extra-js %}
 
-{% endblock %}
+
