--- a/A_dbms/templates/dbms/review/review/review-table.html
+++ b/A_dbms/templates/dbms/review/review/review-table.html
@@ -3,6 +3,7 @@
         <thead>
         <tr style="text-align: center">
             <th>客户名称({{ custom_acount }})</th>
+            <th>管户经理</th>
             <th>授信总额</th>
             <th>流贷余额</th>
             <th>承兑余额</th>
@@ -22,6 +23,7 @@
                 {% if PAGE_TITLE == '保后管理' or PAGE_TITLE == '逾期保后' %}
                     <td><a href="{% url 'dbms:review_scan' custom_id=custom.id %}">{{ custom.name }}</a></td>
                 {% endif %}
+                <td align="right">{{ custom.managementor }}</td>
                 <td align="right">{{ custom.credit_amount }}</td>
                 <td align="right">{{ custom.custom_flow }}</td>
                 <td align="right">{{ custom.custom_accept }}</td>
@@ -35,5 +37,4 @@
         </tbody>
     </table>
     {% include 'dbms/board/page.html' %}
-
 </div>
