--- a/A_dbms/templates/dbms/warrant/modl/mod_form/stockes-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/stockes-add-edit.html
@@ -32,6 +32,12 @@
         <label id="e_share" class="pull-right">{{ form_stockes_add_edit.share.errors }}</label>
     </div>
 
+    <div class="form-group"><!--股权比例-->
+        <label for="id_ratio" class="col-sm-3 control-label">{{ form_stockes_add_edit.ratio.label }}：</label>
+        <div class="col-sm-9">{{ form_stockes_add_edit.ratio }}</div>
+        <label id="e_ratio" class="pull-right">{{ form_stockes_add_edit.ratio.errors }}</label>
+    </div>
+
     <div class="form-group"><!--股权类型-->
         <label for="id_stock_typ" class="col-sm-3 control-label">{{ form_stockes_add_edit.stock_typ.label }}：</label>
         <div class="col-sm-9">{{ form_stockes_add_edit.stock_typ }}</div>
