--- a/A_dbms/templates/dbms/report/balance/balance-class-director.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-director.html
@@ -18,6 +18,7 @@
                 <td align="right">{{ director.sum }}</td>
             </tr>
         {% endfor %}
+        {% include 'dbms/report/balance/balance-class.html' %}
         </tbody>
     </table>
 </div>
