--- a/A_dbms/templates/dbms/report/balance_class.html
+++ b/A_dbms/templates/dbms/report/balance_class.html
@@ -1,14 +1,28 @@
 {% extends 'base.html' %}
 {% block title %}{{ PAGE_TITLE }}{% endblock %}
 {% block  body %}
+
+    {#    CLASS_LIST = [(1, '按品种'), (11, '按银行'), (21, '按区域'), (31, '按行业'), (41, '按项目经理'),#}
+    {#                  (51, '按项目助理'), (61, '按风控专员'), (71, '按支行'), ]#}
     <div style="width: 210mm; margin-left: auto; margin-right: auto;">
-        {% include 'dbms/report/balance/balance-class-director.html' %}
-        {% include 'dbms/report/balance/balance-class-assistant.html' %}
-        {% include 'dbms/report/balance/balance-class-control.html' %}
-        {% include 'dbms/report/balance/balance-class-idustry.html' %}
-        {% include 'dbms/report/balance/balance-class-district.html' %}
-        {% include 'dbms/report/balance/balance-class-bank.html' %}
-        {% include 'dbms/report/balance/balance-class-branch.html' %}
+        {% include 'dbms/report/balance/balance-class-filter.html' %}
+        {% if kwargs.class_typ == 1 %}
+            {% include 'dbms/report/balance/balance-class-breed.html' %}
+        {% elif  kwargs.class_typ == 11 %}
+            {% include 'dbms/report/balance/balance-class-bank.html' %}
+        {% elif  kwargs.class_typ == 21 %}
+            {% include 'dbms/report/balance/balance-class-district.html' %}
+        {% elif  kwargs.class_typ == 31 %}
+            {% include 'dbms/report/balance/balance-class-idustry.html' %}
+        {% elif  kwargs.class_typ == 41 %}
+            {% include 'dbms/report/balance/balance-class-director.html' %}
+        {% elif  kwargs.class_typ == 51 %}
+            {% include 'dbms/report/balance/balance-class-assistant.html' %}
+        {% elif  kwargs.class_typ == 61 %}
+            {% include 'dbms/report/balance/balance-class-control.html' %}
+        {% elif  kwargs.class_typ == 71 %}
+            {% include 'dbms/report/balance/balance-class-branch.html' %}
+        {% endif %}
     </div>
 {% endblock %}
 
