--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     {#<link rel="icon" href="http://v3.bootcss.com/favicon.ico">#}
     <title>
 
-        {% block title %}WHDB{% endblock %}
+        {% block title %}武侯担保{% endblock %}
 
     </title>
     <!-- Bootstrap core CSS -->
