--- a/A_dbms/templates/dbms/agree/agree-counter-preview.html
+++ b/A_dbms/templates/dbms/agree/agree-counter-preview.html
@@ -2,62 +2,102 @@
 {% block title %}{{ agree_obj.agree_num }}{% endblock %}
 {% block extra-css %}
     <style>
+        {#页面整体设置#}
         .container {
-            width: 210mm;
-            margin-left: auto;
-            margin-right: auto;
-            font-size: 14px;
+        {#宽度#} width: 210mm;
+        {#左空白#} margin-left: auto;
+        {#又空白#} margin-right: auto;
+        {#字体大小#} font-size: 12pt;
+        {#背景色#} background-color: #dddddd;
+        {#字间距#} letter-spacing: 1pt;
+        {#行间距#} line-height: 19pt;
         }
 
+        {#段前缩进#}
         p {
-            text-indent: 32px;
+            text-indent: 26pt;
         }
 
+        {#换页打印#}
         .split {
-
             page-break-after: always;
-
         }
 
+        {#收紧#}
+        .frap {
+        {#字间距#} letter-spacing: 0pt;
+        }
+
+        {#合同标题#}
         .agree-title {
             text-align: center;
-            font-size: 22px;
-            padding-top: 50px;
-            padding-bottom: 50px;
+            font-size: 21pt;
+            padding-top: 25mm;
+            padding-bottom: 25mm;
         }
 
-        .page-table > p {
-            padding-top: 25px;
+        .page-home p {
+            padding-top: 12pt;
         }
 
-        .page-table-1 {
-            font-size: 14px;
-            padding-top: 50px;
-            padding-bottom: 50px;
+        {#合同封面-甲方#}
+        .page-home-j {
+            font-size: 13.75pt;
+            padding-top: 20mm;
+            padding-bottom: 20mm;
         }
 
-        .page-table-2 {
-            font-size: 14px;
-            padding-top: 50px;
+        {#合同封面-乙方#}
+        .page-home-y {
+            font-size: 13.75pt;
+            padding-top: 20mm;
+            padding-bottom: 20mm;
         }
 
+        {#合同签字页#}
+        .sign-page {
+            padding-top: 24pt;
+        }
+
+        .sign-page > div {
+            padding-bottom: 124pt;
+        }
+
+        .sign-page p {
+            padding-bottom: 10pt;
+        }
+
+        .sign-date {
+            padding-left: 150pt;
+        }
     </style>
 {% endblock %}
 {% block body %}
-    <!--COUNTER_TYP_LIST = (
-        (1, '企业担保'), (2, '个人保证'),
-        (11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (15, '车辆抵押'),
-        (31, '应收质押'), (32, '股权质押'), (33, '票据质押'),
-        (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))
-    AGREE_TYP_LIST = ((1, '单笔'), (2, '最高额'), (3, '保函'))-->
-    {% if agree_obj.agree_typ == 1 %} <!--单笔-->
-        {% if counter_obj.counter_typ == 1 %}<!--企业保证-->
-            {% include 'dbms/agree/agree_board/counter-s-x.html' %}
-            {% elif counter_obj.counter_typ == 2 %}<!--个人保证-->
-            {% include 'dbms/agree/agree_board/counter-s-g.html' %}
-
-            {% elif counter_obj.counter_typ == 11 %}<!--房产抵押-->
-            {% include 'dbms/agree/agree_board/counter-s-d.html' %}
+    <!-- COUNTER_TYP_LIST = (
+            (1, '企业担保'), (2, '个人保证'),
+            (11, '房产抵押'), (12, '土地抵押'), (13, '动产抵押'), (14, '在建工程抵押'), (15, '车辆抵押'),
+            (31, '应收质押'), (32, '股权质押'), (33, '票据质押'), (34, '动产质押'),
+            (41, '其他权利质押'),
+            (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))
+            AGREE_TYP_LIST = [(1, '单笔'), (2, '最高额'), (3, '保函'), (7, '小贷'),
+                          (41, '单笔(公证)'), (42, '最高额(公证)'), (47, '小贷(公证)')]-->
+    {#单笔#}
+    {% if agree_obj.agree_typ == 1 %}
+        {% if counter_obj.counter_typ == 1 %}
+            {% include 'dbms/agree/agree_board/counter/counter-s-x.html' %}
+        {% elif counter_obj.counter_typ == 2 %}
+            {% include 'dbms/agree/agree_board/counter/counter-s-g.html' %}
+        {% elif counter_obj.counter_typ == 11 %}
+            {% include 'dbms/agree/agree_board/counter/counter-s-d.html' %}
+        {% endif %}
+        {#最高额#}
+    {% elif agree_obj.agree_typ == 2 %}
+        {% if counter_obj.counter_typ == 1 %}
+            {% include 'dbms/agree/agree_board/counter/counter-m-x.html' %}
+        {% elif counter_obj.counter_typ == 2 %}
+            {% include 'dbms/agree/agree_board/counter/counter-m-g.html' %}
+        {% elif counter_obj.counter_typ == 11 %}
+            {% include 'dbms/agree/agree_board/counter/counter-m-d.html' %}
         {% endif %}
     {% endif %}
 {% endblock %}
