--- a/A_dbms/templates/dbms/agree/agree_board/entrust-maximum.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust-maximum.html
@@ -8,34 +8,10 @@
         法律规定，经协商一致，订立本合同，以便共同遵守执行。
     </p>
     <p>一、甲乙双方遵循平等、自愿、公平、诚实信用原则订立本合同。</p>
-    <p>二、甲方同意为乙方自<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-        <u>&nbsp&nbsp&nbsp&nbsp</u>月
-        <u>&nbsp&nbsp&nbsp&nbsp</u>日至<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-        <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日期间，
-        向债权人（或受益人）<strong><u>{{ agree_obj.branch.name }}</u></strong>申请限额（即最高
-        额限额）为人民币<strong><u class="frap">{{ agree_amount_str }}</u></strong>万元
-        （大写：<strong><u>{{ agree_amount_cn }}</u></strong>）
-        的一系列债务（包括但不限于：人民币借款、银行承兑汇票扣除保证金后的差额票款、保函等）提供担保。
-        上述一系列债务的保证合同包括但不限于： </p>
-    <p>（一）担保范围：与甲方与债权人（或受益人）自<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-        <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日至
-        <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-        <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日期间签订的
-        一系列保证合同或保函一致。</p>
-    <p>（二）担保期限：与甲方与债权人（或受益人）自<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-        <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日至
-        <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>年
-        <u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日期间签订的
-        每笔保证合同或保函中约定的保证期间一致，但担保期限不超过限期内最后一笔债务履行期届满之日后两年。</p>
-    <p>（三）乙方在办理最高额限额内的每笔融资业务时，应提前向甲方申请，经甲方审批同意后再与债权银行签
-        订相关合同或出具放款通知书后方可使用。</p>
-    <p>超出以上限额和期限以及未经甲方认可同意的任何款项，甲方不承担担保责任。</p>
-    <p>三、甲方可根据乙方的信用情况，向乙方收取人民币
-        <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>元
-        （大写：<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>元整）
-        担保风险保证金，并由乙方在本合同签订后3个工作日内支付至甲方指定账户。在乙方完全履行
-        完由甲方担保的债务后，甲方将上述保证金无息退还乙方，如乙方不履行债务，上述保证金将作
-        为违约金，甲方不予退还。</p>
+    {#担保范围条款#}
+    <p>二、{% include 'dbms/agree/agree_board/entrust/max/2-amount-0.html' %}</p>
+    {#保证金条款#}
+    <p>三、{% include 'dbms/agree/agree_board/entrust/max/3-bail-0.html' %}</p>
     <p>四、甲方代乙方履行付款责任后，乙方应立即向甲方归还下列款项：</p>
     <p>（一）甲方向银行代付的金额和自代付之日起的利息。</p>
     <p>（二）甲方实现债权的调查、诉讼、律师费用及其它损失。</p>
