--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container">
+    <div class="container" style="text-align: center">
+        <h3 class="form-signin-heading">业务管理系统</h3>
         <form class="form-signin" method="post">{% csrf_token %}
-            <h2 class="form-signin-heading">系统登录</h2>
             <div class="form-group">
                 <label for="inputEmail" class="sr-only">Username</label>
                 <input type="text" id="inputEmail" name="username" class="form-control" placeholder="用户名" required
@@ -24,5 +24,6 @@
                 登录
             </button>
         </form>
+        <h1 style="color: #1c5a9c">成都武侯中小企业有限责任公司</h1>
     </div> <!-- /container -->
 {% endblock %}
